--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="mysql-connector-java-5.1.37-bin.jar"/>
+	<classpathentry kind="lib" path="com.springsource.javax.persistence-2.0.0.Beta1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
