--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="META-INF"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="mysql-connector-java-5.1.37-bin.jar"/>
-	<classpathentry kind="lib" path="com.springsource.javax.persistence-2.0.0.Beta1.jar"/>
+	<classpathentry exported="true" kind="lib" path="com.springsource.javax.persistence-2.0.0.Beta1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
